16_subseq/grade.txt
Grading at Fri Jun 14 18:31:46 UTC 2019
Attempting to compile maxSeq.c 
maxSeq.c:1:1: error: unknown type name ‘size_t’
 size_t maxSeq(int * array, size_t n){
 ^
maxSeq.c:1:28: error: unknown type name ‘size_t’
 size_t maxSeq(int * array, size_t n){
                            ^
The code did not compile!

Overall Grade: F
